// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "AMOUNT_BEFORE_FEE_OVERFLOW",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14915,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14907,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 70,
    "range_check_builtin_applications": 2001,
    "steps": 38025,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 69,
    "range_check_builtin_applications": 1948,
    "steps": 32908,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 71,
    "range_check_builtin_applications": 2062,
    "steps": 34350,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2287,
    "steps": 36549,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 71,
    "range_check_builtin_applications": 1921,
    "steps": 34080,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2348,
    "steps": 36366,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 70,
    "range_check_builtin_applications": 2001,
    "steps": 38026,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 448,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 69,
    "range_check_builtin_applications": 1948,
    "steps": 32909,
  },
  "liquidity_after": 100000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2281,
    "steps": 36718,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941866287043816850431081895n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 81,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2320,
    "steps": 44570,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935060639705398047133577709n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -500000000000000000n,
    "amount1": 1003009027081243732n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2257,
    "steps": 37897,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -999999999999999996n,
    "amount1": 18466747002319258406770079872888746570n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 299,
    "data_availability": {
      "l1_data_gas": 832,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 146,
    "range_check_builtin_applications": 11548,
    "steps": 125216,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1003009027081243732n,
    "amount1": -500000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 3083,
    "steps": 41586,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 18466747002319258406770079872888746569n,
    "amount1": -999999999999999994n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 327,
    "data_availability": {
      "l1_data_gas": 832,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 147,
    "range_check_builtin_applications": 12418,
    "steps": 133856,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14915,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14907,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 81,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2250,
    "steps": 44502,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2224,
    "steps": 36644,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2516,
    "steps": 38289,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 79,
    "range_check_builtin_applications": 2741,
    "steps": 40488,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2401,
    "steps": 37976,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 79,
    "range_check_builtin_applications": 2828,
    "steps": 40263,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -999999999987340232n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 945,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 108,
    "range_check_builtin_applications": 25373,
    "steps": 238350,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 4307890968852183321656454888n,
  "tick_after": -50185212n,
}
`;

exports[`core > regular pool > 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -999999999987340232n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 918,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 107,
    "range_check_builtin_applications": 25140,
    "steps": 231866,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 26879066827489470242203952493307087579544590886863n,
  "tick_after": 50185211n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2287,
    "steps": 36737,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941866287043816850431081895n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1649,
    "data_availability": {
      "l1_data_gas": 320,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 126,
    "range_check_builtin_applications": 27341,
    "steps": 353611,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -500000000000000000n,
    "amount1": 1003009027081243732n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2263,
    "steps": 37916,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -999999999999999996n,
    "amount1": 18466747002319258406770079872888746570n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 300,
    "data_availability": {
      "l1_data_gas": 832,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 146,
    "range_check_builtin_applications": 11554,
    "steps": 125235,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "data_availability": {
      "l1_data_gas": 320,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 69,
    "range_check_builtin_applications": 2680,
    "steps": 35661,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 299,
    "data_availability": {
      "l1_data_gas": 320,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 126,
    "range_check_builtin_applications": 8651,
    "steps": 112539,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14915,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14907,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1649,
    "data_availability": {
      "l1_data_gas": 320,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 126,
    "range_check_builtin_applications": 27281,
    "steps": 353437,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2230,
    "steps": 36663,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "data_availability": {
      "l1_data_gas": 320,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 69,
    "range_check_builtin_applications": 2679,
    "steps": 35664,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 299,
    "data_availability": {
      "l1_data_gas": 320,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 126,
    "range_check_builtin_applications": 8641,
    "steps": 112515,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2407,
    "steps": 37995,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 79,
    "range_check_builtin_applications": 2834,
    "steps": 40282,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1649,
    "data_availability": {
      "l1_data_gas": 320,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 126,
    "range_check_builtin_applications": 27281,
    "steps": 353437,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -999999999987340232n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 919,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 107,
    "range_check_builtin_applications": 25146,
    "steps": 231885,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 26879066827489470242203952493307087579544590886863n,
  "tick_after": 50185211n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1621,
    "data_availability": {
      "l1_data_gas": 256,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 113,
    "range_check_builtin_applications": 27881,
    "steps": 347817,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "data_availability": {
      "l1_data_gas": 768,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 87,
    "range_check_builtin_applications": 2380,
    "steps": 45157,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935060639705398047133577709n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 256,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 56,
    "range_check_builtin_applications": 1629,
    "steps": 26165,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 271,
    "data_availability": {
      "l1_data_gas": 256,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 113,
    "range_check_builtin_applications": 8211,
    "steps": 104021,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1003009027081243732n,
    "amount1": -500000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "data_availability": {
      "l1_data_gas": 768,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 89,
    "range_check_builtin_applications": 3303,
    "steps": 47394,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 18466747002319258406770079872888746567n,
    "amount1": -999999999999999994n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 329,
    "data_availability": {
      "l1_data_gas": 768,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 149,
    "range_check_builtin_applications": 11868,
    "steps": 133624,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14915,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14907,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "data_availability": {
      "l1_data_gas": 768,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 87,
    "range_check_builtin_applications": 2310,
    "steps": 45089,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1621,
    "data_availability": {
      "l1_data_gas": 256,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 113,
    "range_check_builtin_applications": 27822,
    "steps": 347634,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 56,
    "data_availability": {
      "l1_data_gas": 768,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 89,
    "range_check_builtin_applications": 2735,
    "steps": 44094,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 56,
    "data_availability": {
      "l1_data_gas": 768,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 92,
    "range_check_builtin_applications": 2930,
    "steps": 46259,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 256,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 56,
    "range_check_builtin_applications": 1629,
    "steps": 26159,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 271,
    "data_availability": {
      "l1_data_gas": 256,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 113,
    "range_check_builtin_applications": 8202,
    "steps": 103988,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -999999999987340232n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 947,
    "data_availability": {
      "l1_data_gas": 768,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 120,
    "range_check_builtin_applications": 25433,
    "steps": 238937,
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 4307890968852183321656454888n,
  "tick_after": -50185212n,
}
`;

exports[`core > regular pool > 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1621,
    "data_availability": {
      "l1_data_gas": 256,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 113,
    "range_check_builtin_applications": 27822,
    "steps": 347634,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10001n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2323,
    "steps": 36775,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431771614280n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10001n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 84,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2393,
    "steps": 44660,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431764808632n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1000000000000000002n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2331,
    "steps": 36789,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706675260n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1000000000000000002n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2332,
    "steps": 36791,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706675260n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1000000000000000002n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 57,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2397,
    "steps": 40276,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829747992n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000002n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 57,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2397,
    "steps": 40278,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829747992n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9999n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 84,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2325,
    "steps": 44594,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431764808633n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9999n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2268,
    "steps": 36703,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431771614279n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -999999999999999998n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 57,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2330,
    "steps": 40213,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829748333n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2276,
    "steps": 36717,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "data_availability": {
      "l1_data_gas": 640,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2277,
    "steps": 36719,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2271,
    "steps": 36696,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374650381441171457n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 81,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2308,
    "steps": 44538,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374564482095251456n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1003009027093903486n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2249,
    "steps": 37876,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925233430759428817540393170906n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1003009027093903486n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 79,
    "range_check_builtin_applications": 2676,
    "steps": 40163,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925233430759428817540393170906n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1003009027093903486n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2373,
    "steps": 40871,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916643496167374607431768211456n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 1003009027093903486n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 79,
    "range_check_builtin_applications": 2598,
    "steps": 43070,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916643496167374607431768211456n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14915,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14907,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 81,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2242,
    "steps": 44484,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374564610944270337n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2216,
    "steps": 36626,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366920938463463374650252592152576n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -996999999987453842n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2315,
    "steps": 40832,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916656381069316492767631040557n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -996999999987453842n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 79,
    "range_check_builtin_applications": 2540,
    "steps": 43031,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366916656381069316492767631040557n,
  "tick_after": -1n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -996999999987453842n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 76,
    "range_check_builtin_applications": 2199,
    "steps": 37818,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925220545857486607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -996999999987453842n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 79,
    "range_check_builtin_applications": 2626,
    "steps": 40105,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 340282366925220545857486607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -39554570869665270195675172000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 54,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 75,
    "range_check_builtin_applications": 2462,
    "steps": 41979,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 170396778628411849505946223051528149971n,
  "tick_after": -1383293n,
}
`;

exports[`core > regular pool > 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -39554570869665270195675172000n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 27,
    "data_availability": {
      "l1_data_gas": 704,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 74,
    "range_check_builtin_applications": 2432,
    "steps": 36813,
  },
  "liquidity_after": 79228162514264337593543950336n,
  "sqrt_ratio_after": 679543886741114111536359091036980510720n,
  "tick_after": 1383292n,
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=0.6%, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=1, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 0 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 0 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 10000 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 10000 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > no liquidity, starting at price 1, tick_spacing=max, fee=max > swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "NOT_INITIALIZED",
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10516n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 83,
    "data_availability": {
      "l1_data_gas": 832,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 87,
    "range_check_builtin_applications": 3338,
    "steps": 46234,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 358548395291435633147515612429947974483n,
  "tick_after": 104575n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10647n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 114,
    "data_availability": {
      "l1_data_gas": 832,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 90,
    "range_check_builtin_applications": 3245,
    "steps": 51779,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 318197518696337062819639931106676301593n,
  "tick_after": -134207n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 84,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 92,
    "range_check_builtin_applications": 3283,
    "steps": 50251,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 327,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 149,
    "range_check_builtin_applications": 9865,
    "steps": 128108,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 142,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 95,
    "range_check_builtin_applications": 4255,
    "steps": 59683,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 358,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 152,
    "range_check_builtin_applications": 10226,
    "steps": 136561,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14915,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "data_availability": {
      "l1_data_gas": 128,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 53,
    "range_check_builtin_applications": 484,
    "steps": 14907,
  },
  "liquidity_after": 230021n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1 token1 limit 1 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9433n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 114,
    "data_availability": {
      "l1_data_gas": 832,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 90,
    "range_check_builtin_applications": 3270,
    "steps": 51820,
  },
  "liquidity_after": 100009n,
  "sqrt_ratio_after": 320125855863226297598523424027276983985n,
  "tick_after": -122124n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9536n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 56,
    "data_availability": {
      "l1_data_gas": 832,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 87,
    "range_check_builtin_applications": 2920,
    "steps": 43066,
  },
  "liquidity_after": 150019n,
  "sqrt_ratio_after": 357384707370995463786432309339396758729n,
  "tick_after": 98074n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 2 limit 0.25 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 142,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 95,
    "range_check_builtin_applications": 4314,
    "steps": 59808,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 358,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 152,
    "range_check_builtin_applications": 10276,
    "steps": 136659,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 2 limit 4 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 84,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 92,
    "range_check_builtin_applications": 3277,
    "steps": 50259,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 327,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 149,
    "range_check_builtin_applications": 9850,
    "steps": 128089,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 13101n,
    "amount1": -12092n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1708,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 152,
    "range_check_builtin_applications": 28916,
    "steps": 377581,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core > regular pool > overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -15232n,
    "amount1": 16564n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 1677,
    "data_availability": {
      "l1_data_gas": 896,
      "l1_gas": 0,
    },
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 149,
    "range_check_builtin_applications": 29470,
    "steps": 371735,
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;
